--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Execute shell commands on the runner
         run: |
           ls ${{ github.workspace }}
-          sudo apt update
-          sudo apt install nodejs
+          sudo apt update >> /dev/null
+          sudo apt install nodejs >> /dev/null
           node -v
-          sudo apt install npm
+          sudo apt install npm >> /dev/null
           npm init -y
       - run: echo "🍏 This job's status is ${{ job.status }}."
