node.js project template from Microsoft

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Execute shell commands on the runner
         run: |
           ls ${{ github.workspace }}
-          sudo apt update >> /dev/null
-          sudo apt install nodejs >> /dev/null
+          sudo apt-get update >> /dev/null
+          sudo apt-get install nodejs >> /dev/null
           node -v
-          sudo apt install npm >> /dev/null
+          sudo apt-get install npm >> /dev/null
           npm init -y
+          cat node_essentials/package.json
       - run: echo "🍏 This job's status is ${{ job.status }}."
