node.js project template from Microsoft

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -20,5 +20,5 @@ jobs:
           node -v
           sudo apt-get install npm >> /dev/null
           npm init -y
-          cat node_essentials/package.json
+          cat package.json
       - run: echo "🍏 This job's status is ${{ job.status }}."
