node.js - test with jest javascript testing framework

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -23,7 +23,7 @@ jobs:
           # npm init -y
           npm start
           cd ..
-          5-exercise-dependency
+          cd 5-exercise-dependency
           npm run test
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
