node.js project - jest javascript testing framework

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -24,6 +24,7 @@ jobs:
           npm start
           cd ..
           cd 5-exercise-dependency
+          npm install jest --save-dev
           npm run test
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
