node.js - npm update outdated packages

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -26,5 +26,11 @@ jobs:
           cd 5-exercise-dependency
           npm install jest --save-dev
           npm run test
+          cd ..
+          cd 7-exercise-dependency-management
+          npm install
+          npm outdated
+          npm update
+          npm install node-fetch@latest lodash@latest
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
