node.js - npm update outdated packages

--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -29,7 +29,7 @@ jobs:
           cd ..
           cd 7-exercise-dependency-management
           npm install
-          npm list
+          # Below will trigger failure if the packages are not updated.
           # npm outdated
           npm update
           npm list
