--- a/.github/workflows/github_action_push_trigger.yml
+++ b/.github/workflows/github_action_push_trigger.yml
@@ -32,8 +32,6 @@ jobs:
           # Below will trigger failure if the packages are not updated.
           # npm outdated
           npm update
-          npm list
           npm install node-fetch@latest lodash@latest
-          npm list
-
+          npm start
       - run: echo "🍏 This job's status is ${{ job.status }}."
